Added employee menu

--- a/TestHR.Web/Views/Shared/_LeftMenuPartial.cshtml
+++ b/TestHR.Web/Views/Shared/_LeftMenuPartial.cshtml
@@ -25,13 +25,11 @@
         </div>
     </li>        
     <li class="no-padding">
-        <a class="collapsible-header waves-effect waves-grey"><i class="material-icons">grid_on</i>Tables<i class="nav-drop-icon material-icons">keyboard_arrow_right</i></a>
+        <a class="collapsible-header waves-effect waves-grey"><i class="material-icons">grid_on</i>Employee<i class="nav-drop-icon material-icons">keyboard_arrow_right</i></a>
         <div class="collapsible-body">
             <ul>
-                <li><a href="table-static.html">Static Tables</a></li>
-                <li><a href="table-responsive.html">Responsive Tables</a></li>
-                <li><a href="table-comparison.html">Comparison Table</a></li>
-                <li><a href="table-data.html">Data Tables</a></li>
+                <li><a href="/Admin/Employee/Index">Employee List</a></li>
+                <li><a href="/Admin/Employee/Add">Create New</a></li>
             </ul>
         </div>
     </li>
