--- a/TestHR.Web/Areas/Admin/Views/Calendar/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Calendar/Index.cshtml
@@ -27,7 +27,7 @@
         </div>
         <div class="col s12">
             <div >
-                <a href="@Url.Action("CalenderImport", "Calender", new {})" class="btn-default"><i >Emport Excel</i></a>
+                <a href="@Url.Action("CalendarImport", "Calendar", new {})" class="btn-default"><i >Emport Excel</i></a>
             </div>
         </div>
         <div class="col s12 m12 l12">
