--- a/TestHR.Web/Areas/Admin/Views/Department/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Department/Index.cshtml
@@ -3,7 +3,7 @@
         ViewBag.Title = "Index";
         Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
     }
-
+    <link href="~/Plugins/sweetalert/sweetalert.css" rel="stylesheet" />
     <link href="~/Plugins/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
     <main class="mn-inner">
         <div class="row">
@@ -32,7 +32,7 @@
                                         <td>@department.Employees</td>
                                         <td>
                                             <a href="@Url.Action("Edit","Department",new{id=department.Id})" class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>
-                                            <a class="btn-floating waves-effect waves-light red"><i class="material-icons">delete</i></a>
+                                            <a class="btn-floating waves-effect waves-light red sweetalert-warning" data-id="@department.Id"><i class="material-icons">delete</i></a>
                                         </td>
                                     </tr>
                                 }
@@ -47,13 +47,13 @@
 
     @section scripts
 {
-
+        <script src="~/Plugins/sweetalert/sweetalert.min.js"></script>
         <script src="~/Plugins/datatables/js/jquery.dataTables.min.js"></script>
         <script type="text/javascript">
             $(document).ready(function () {
                 $('#companyList').DataTable({
                     language: {
-                        searchPlaceholder: 'Search Company',
+                        searchPlaceholder: 'Search Branch',
                         sSearch: '',
                         sLengthMenu: 'Show _MENU_',
                         sLength: 'dataTables_length',
@@ -66,6 +66,33 @@
                     }
                 });
                 $('.dataTables_length select').addClass('browser-default');
+                $('.sweetalert-warning').click(function () {
+                    var url = '@Url.Action("Delete", "Department")';
+                    var id = $(this).data('id');
+                    console.log(id);
+                    swal({
+                        title: "Are you sure?",
+                        text: "You will not be able to recover this imaginary file!",
+                        type: "warning",
+                        showCancelButton: true,
+                        confirmButtonColor: "#DD6B55",
+                        confirmButtonText: "Yes, delete it!",
+                        closeOnConfirm: false
+                    }, function () {
+                        $.ajax({
+                            url: url,
+                            type: 'POST',
+                            data: { id: id }
+                        }).done(function (data) {
+                            swal("Deleted!", "Your imaginary file has been deleted.", "success");
+                            location.reload();
+                        }).fail(function () {
+                            $.alert("There is something wrong! Please try again.", '<i class="fa fa-exclamation-circle" aria-hidden="true"> Alert</i>');
+                        });
+
+                    });
+
+                });
             });
         </script>
     }
