--- a/TestHR.Web/Areas/Admin/Views/Holiday/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Holiday/Index.cshtml
@@ -3,7 +3,7 @@
         ViewBag.Title = "Index";
         Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
     }
-
+    <link href="~/Plugins/sweetalert/sweetalert.css" rel="stylesheet" />
     <link href="~/Plugins/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
     <main class="mn-inner">
         <div class="row">
@@ -14,7 +14,7 @@
                 <div class="card">
                     <div class="card-content">
                         <span class="card-title">Holiday</span>
-                        <table id="companyList" class="display responsive-table datatable-example">
+                        <table id="holidayList" class="display responsive-table datatable-example">
                             <thead>
                                 <tr>
                                     <th>Name</th>
@@ -33,8 +33,8 @@
                                         <td>@holiday.DateFrom</td>
                                         <td>@holiday.DateTo</td>
                                         <td>
-                                            <a class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>
-                                            <a class="btn-floating waves-effect waves-light red"><i class="material-icons">delete</i></a>
+                                            @*<a href="@Url.Action("Edit","Company",new{id=holiday.Id})"  class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>*@
+                                            @*<a class="btn-floating waves-effect waves-light red sweetalert-warning" data-id="@holiday.Id"><i class="material-icons">delete</i></a>*@
                                         </td>
                                     </tr>
                                 }
@@ -53,7 +53,7 @@
         <script src="~/Plugins/datatables/js/jquery.dataTables.min.js"></script>
         <script type="text/javascript">
             $(document).ready(function () {
-                $('#companyList').DataTable({
+                $('#holidayList').DataTable({
                     language: {
                         searchPlaceholder: 'Search Company',
                         sSearch: '',
