--- a/TestHR.Web/Areas/Admin/Views/Position/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Position/Index.cshtml
@@ -4,7 +4,8 @@
         ViewBag.Title = "Index";
         Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
     }
-
+    <link href="~/Plugins/sweetalert/sweetalert.css" rel="stylesheet" />
+    <link href="~/Plugins/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
     <main class="mn-inner">
         <div class="row">
             <div class="col s12">
@@ -13,7 +14,7 @@
             <div class="col s12 m12 l12">
                 <div class="card">
                     <div class="card-content">
-                        <table id="example" class="display responsive-table datatable-example">
+                        <table id="positionList" class="display responsive-table datatable-example">
                             <thead>
                                 <tr>
                                     <th>Position</th>
@@ -45,7 +46,7 @@
                                         }
                                         <td>
                                             <a href="@Url.Action("Edit","Position",new{id=position.Id})" class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>
-                                            <a class="btn-floating waves-effect waves-light red"><i class="material-icons">delete</i></a>
+                                            <a class="btn-floating waves-effect waves-light red sweetalert-warning" data-id="@position.Id"><i class="material-icons">delete</i></a>
                                         </td>
                                     </tr>
                                 }
@@ -59,12 +60,13 @@
     </main>
 @section scripts
 {
+    <script src="~/Plugins/sweetalert/sweetalert.min.js"></script>
     <script src="~/Plugins/datatables/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-            $('#companyList').DataTable({
+            $('#positionList').DataTable({
                 language: {
-                    searchPlaceholder: 'Search Company',
+                    searchPlaceholder: 'Search Position',
                     sSearch: '',
                     sLengthMenu: 'Show _MENU_',
                     sLength: 'dataTables_length',
@@ -77,6 +79,34 @@
                 }
             });
             $('.dataTables_length select').addClass('browser-default');
+
+            $('.sweetalert-warning').click(function () {
+                var url = '@Url.Action("Delete", "Position")';
+                var id = $(this).data('id');
+                console.log(id);
+                swal({
+                    title: "Are you sure?",
+                    text: "You will not be able to recover this imaginary file!",
+                    type: "warning",
+                    showCancelButton: true,
+                    confirmButtonColor: "#DD6B55",
+                    confirmButtonText: "Yes, delete it!",
+                    closeOnConfirm: false
+                }, function () {
+                    $.ajax({
+                        url: url,
+                        type: 'POST',
+                        data: { id: id }
+                    }).done(function (data) {
+                        swal("Deleted!", "Your imaginary file has been deleted.", "success");
+                        location.reload();
+                    }).fail(function () {
+                        $.alert("There is something wrong! Please try again.", '<i class="fa fa-exclamation-circle" aria-hidden="true"> Alert</i>');
+                    });
+
+                });
+
+            });
         });
     </script>
 }
