--- a/TestHR.Web/Areas/Admin/Views/Holiday/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Holiday/Index.cshtml
@@ -33,7 +33,7 @@
                                         <td>@holiday.DateFrom</td>
                                         <td>@holiday.DateTo</td>
                                         <td>
-                                            @*<a href="@Url.Action("Edit","Company",new{id=holiday.Id})"  class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>*@
+                                            <a href="@Url.Action("Edit","Holiday",new{id=holiday.Id})"  class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>
                                             @*<a class="btn-floating waves-effect waves-light red sweetalert-warning" data-id="@holiday.Id"><i class="material-icons">delete</i></a>*@
                                         </td>
                                     </tr>
