--- a/TestHR.Web/Areas/Admin/Views/Branch/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Branch/Index.cshtml
@@ -45,11 +45,11 @@
     </main>
 
     @section scripts
-{
+    {
         <script src="~/Plugins/sweetalert/sweetalert.min.js"></script>
         <script src="~/Plugins/datatables/js/jquery.dataTables.min.js"></script>
         <script type="text/javascript">
-            $(document).ready(function () {
+            $(document).ready(function() {
                 $('#branchList').DataTable({
                     language: {
                         searchPlaceholder: 'Search Branch',
@@ -66,7 +66,7 @@
                 });
                 $('.dataTables_length select').addClass('browser-default');
 
-                $('.sweetalert-warning').click(function () {
+                $('.sweetalert-warning').click(function() {
                     var url = '@Url.Action("Delete", "Branch")';
                     var id = $(this).data('id');
                     console.log(id);
@@ -78,15 +78,20 @@
                         confirmButtonColor: "#DD6B55",
                         confirmButtonText: "Yes, delete it!",
                         closeOnConfirm: false
-                    }, function () {
+                    }, function() {
                         $.ajax({
                             url: url,
                             type: 'POST',
                             data: { id: id }
-                        }).done(function (data) {
-                            swal("Deleted!", "Your imaginary file has been deleted.", "success");
-                            location.reload();
-                        }).fail(function () {
+                        }).done(function(data) {
+                            swal({
+                                title: "Deleted!",
+                                text:"Your imaginary file has been deleted.", 
+                                type:"success"
+                            },function() {
+                                location.reload();
+                            });
+                        }).fail(function() {
                             $.alert("There is something wrong! Please try again.", '<i class="fa fa-exclamation-circle" aria-hidden="true"> Alert</i>');
                         });
 
