--- a/TestHR.Web/Areas/Admin/Views/Holiday/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Holiday/Index.cshtml
@@ -33,8 +33,8 @@
                                         <td>@holiday.DateFrom</td>
                                         <td>@holiday.DateTo</td>
                                         <td>
-                                            @*<a href="@Url.Action("Edit","Company",new{id=holiday.Id})"  class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>*@
-                                            @*<a class="btn-floating waves-effect waves-light red sweetalert-warning" data-id="@holiday.Id"><i class="material-icons">delete</i></a>*@
+                                            <a class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>
+                                            <a class="btn-floating waves-effect waves-light red sweetalert-warning" data-id="@holiday.Id"><i class="material-icons">delete</i></a>
                                         </td>
                                     </tr>
                                 }
@@ -49,7 +49,7 @@
 
     @section scripts
 {
-
+        <script src="~/Plugins/sweetalert/sweetalert.min.js"></script>
         <script src="~/Plugins/datatables/js/jquery.dataTables.min.js"></script>
         <script type="text/javascript">
             $(document).ready(function () {
@@ -68,6 +68,38 @@
                     }
                 });
                 $('.dataTables_length select').addClass('browser-default');
+                $('.sweetalert-warning').click(function () {
+                    var url = '@Url.Action("Delete", "Holiday")';
+                    var id = $(this).data('id');
+                    console.log(id);
+                    swal({
+                        title: "Are you sure?",
+                        text: "You will not be able to recover this imaginary file!",
+                        type: "warning",
+                        showCancelButton: true,
+                        confirmButtonColor: "#DD6B55",
+                        confirmButtonText: "Yes, delete it!",
+                        closeOnConfirm: false
+                    }, function () {
+                        $.ajax({
+                            url: url,
+                            type: 'POST',
+                            data: { id: id }
+                        }).done(function (data) {
+                            swal({
+                                title: "Deleted!",
+                                text: "Your imaginary file has been deleted.",
+                                type: "success"
+                            }, function () {
+                                location.reload();
+                            });
+                        }).fail(function () {
+                            $.alert("There is something wrong! Please try again.", '<i class="fa fa-exclamation-circle" aria-hidden="true"> Alert</i>');
+                        });
+
+                    });
+
+                });
             });
         </script>
     }
