--- a/TestHR.Web/Areas/Admin/Views/Position/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Position/Index.cshtml
@@ -98,8 +98,13 @@
                         type: 'POST',
                         data: { id: id }
                     }).done(function (data) {
-                        swal("Deleted!", "Your imaginary file has been deleted.", "success");
-                        location.reload();
+                        swal({
+                            title:"Deleted!", 
+                            text:"Your imaginary file has been deleted.", 
+                            type: "success"
+                        },function() {
+                            location.reload();
+                        });
                     }).fail(function () {
                         $.alert("There is something wrong! Please try again.", '<i class="fa fa-exclamation-circle" aria-hidden="true"> Alert</i>');
                     });
