--- a/TestHR.Web/Areas/Admin/Views/Shift/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Shift/Index.cshtml
@@ -3,7 +3,7 @@
         ViewBag.Title = "Index";
         Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
     }
-
+    <link href="~/Plugins/sweetalert/sweetalert.css" rel="stylesheet" />
     <link href="~/Plugins/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
     <main class="mn-inner">
         <div class="row">
@@ -14,7 +14,7 @@
                 <div class="card">
                     <div class="card-content">
                         <span class="card-title">Shift</span>
-                        <table id="companyList" class="display responsive-table datatable-example">
+                        <table id="shiftList" class="display responsive-table datatable-example">
                             <thead>
                                 <tr>
                                     <th>Name</th>
@@ -24,6 +24,7 @@
                                     <th>IsDefault</th>
                                     <th>IsActive</th>
                                     <th>OfficeHourDescription</th>
+                                    <th>Action</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -40,7 +41,7 @@
 
                                         <td>
                                             <a class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>
-                                            <a class="btn-floating waves-effect waves-light red"><i class="material-icons">delete</i></a>
+                                            <a class="btn-floating waves-effect waves-light red sweetalert-warning" data-id="@shift.Id"><i class="material-icons">delete</i></a>
                                         </td>
                                     </tr>
                                 }
@@ -54,14 +55,14 @@
     </main>
 
     @section scripts
-{
-
+    {
+        <script src="~/Plugins/sweetalert/sweetalert.min.js"></script>
         <script src="~/Plugins/datatables/js/jquery.dataTables.min.js"></script>
         <script type="text/javascript">
-            $(document).ready(function () {
-                $('#companyList').DataTable({
+            $(document).ready(function() {
+                $('#shiftList').DataTable({
                     language: {
-                        searchPlaceholder: 'Search Company',
+                        searchPlaceholder: 'Search Shift',
                         sSearch: '',
                         sLengthMenu: 'Show _MENU_',
                         sLength: 'dataTables_length',
@@ -74,7 +75,39 @@
                     }
                 });
                 $('.dataTables_length select').addClass('browser-default');
+
+                $('.sweetalert-warning').click(function() {
+                    var url = '@Url.Action("Delete", "Shift")';
+                    var id = $(this).data('id');
+                    console.log(id);
+                    swal({
+                        title: "Are you sure?",
+                        text: "You will not be able to recover this imaginary file!",
+                        type: "warning",
+                        showCancelButton: true,
+                        confirmButtonColor: "#DD6B55",
+                        confirmButtonText: "Yes, delete it!",
+                        closeOnConfirm: false
+                    }, function() {
+                        $.ajax({
+                            url: url,
+                            type: 'POST',
+                            data: { id: id }
+                        }).done(function(data) {
+                            swal({
+                                title: "Deleted!",
+                                text: "Your imaginary file has been deleted.",
+                                type: "success"
+                            },function() {
+                                location.reload();
+                            });
+                }).fail(function() {
+                    $.alert("There is something wrong! Please try again.", '<i class="fa fa-exclamation-circle" aria-hidden="true"> Alert</i>');
+                });
+
             });
+            });
+        });
         </script>
     }
 
