--- a/TestHR.Web/Areas/Admin/Views/Company/Add.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Company/Add.cshtml
@@ -79,7 +79,7 @@
                         <div class="row">
                             <div class="col s4 offset-m7 offset-m1">
                                 <input type="submit" class="btn btn-default green col s4 offset-m1" value="Save" />
-                                <input type="button" class="btn btn-default red col s4 offset-m1" value="Cancel" />
+                                @Html.ActionLink("Cancel", "Index", "Company", null, new { @class = "btn btn-default red col s4 offset-m1" })
                             </div>
                         </div>
                     </form>
