--- a/TestHR.Web/Areas/Admin/Views/Position/Edit.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Position/Edit.cshtml
@@ -35,7 +35,7 @@
 
                             <div class="col s4 offset-m7 offset-m1">
                                 <input type="submit" class="btn btn-default green col s4 offset-m1" value="Edit" />
-                                <input type="button" class="btn btn-default red col s4 offset-m1" value="Cancel" />
+                                @Html.ActionLink("Cancel", "Index", "Position", null, new { @class = "btn btn-default red col s4 offset-m1" })
                             </div>
                         </div>
                     </form>
