--- a/TestHR.Web/Areas/Admin/Views/Shift/Edit.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Shift/Edit.cshtml
@@ -52,6 +52,18 @@
                                                     <label for="OfficeHourDescription">Office Hour Description</label>
                                                 </div>
                                                 <div class="input-field col s6">
+                                                    <input name="GraceTimeIn" value="@Model.GraceTimeIn" id="GraceTimeIn" type="time" class="validate">
+                                                    <label for="GraceTimeIn" class="active">GraceTimeIn</label>
+                                                </div>
+                                                <div class="input-field col s6">
+                                                    <input name="GraceTimeOut" value="@Model.GraceTimeOut" id="GraceTimeOut" type="time" class="validate">
+                                                    <label for="GraceTimeOut" class="active">GraceTimeOut</label>
+                                                </div>
+                                                <div class="input-field col m12">
+                                                    <input name="OvertimeStart" value="@Model.OvertimeStart" id="OvertimeStart" type="time" class="validate">
+                                                    <label for="OvertimeStart" class="active">OvertimeStart</label>
+                                                </div>
+                                                <div class="input-field col s6">
                                                     @if (Model.IsDefault)
                                                     {
                                                         <input class="validate" data-val="true" data-val-required="The IsActive field is required." id="IsDefault" name="IsDefault" type="checkbox" value="true" checked="checked" />
