--- a/TestHR.Web/Views/Shared/_LeftMenuPartial.cshtml
+++ b/TestHR.Web/Views/Shared/_LeftMenuPartial.cshtml
@@ -10,7 +10,7 @@
                 <li><a href="/Admin/Position/Index">Position</a></li>
                 <li><a href="/Admin/Shift/Index">Shift</a></li>
                 <li><a href="/Admin/Holiday/Index">Holiday</a></li>
-                <li><a href="/Admin/Leave/Index">Leave Type</a></li>
+                <li><a href="/Admin/LeaveType/Index">Leave Type</a></li>
             </ul>
         </div>
     </li>
@@ -19,8 +19,9 @@
         <a class="collapsible-header waves-effect waves-grey"><i class="material-icons">star_border</i>Leave Management<i class="nav-drop-icon material-icons">keyboard_arrow_right</i></a>
         <div class="collapsible-body">
             <ul>
-                <li><a href="miscellaneous-sweetalert.html">Pending Leave</a>
-                <li><a href="miscellaneous-code-editor.html">Reports</a>
+                <li><a href="/Admin/LeaveApplication/Index">Leave Applications</a>
+                 <li><a href="/Admin/LeaveApplication/Add">New Leave</a>
+                <li><a href="/Admin/LeaveApplication/LeaveReport">Reports</a>
             </ul>
         </div>
     </li>        
