--- a/TestHR.Web/Areas/Admin/Views/LeaveApplication/Add.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/LeaveApplication/Add.cshtml
@@ -24,18 +24,15 @@
                                     @Html.DropDownListFor(m => m.ApplicantId, new SelectList(Model.Employees, "Id", "FirstName"), "--Select--", new { @class = "" })
                                     <label>Applicant</label>
                                 </div>
-                                <div class="input-field col s6">
-                                    <input name="DateFrom" id="icon_prefix" type="date" class="validate">
+                                <div class="input-field col s6"> 
+                                    <input name="DateFrom" id="icon_prefix" type="text" class="validate datepicker">
                                     <label for="icon_prefix">Date From</label>
                                 </div>
                                 <div class="input-field col s6">
-                                    <input name="DateTo" id="icon_prefix" type="date" class="validate">
+                                    <input name="DateTo" id="icon_prefix" type="date" class="validate datepicker">
                                     <label for="icon_prefix">Date To</label>
                                 </div>
-                                <div class="input-field col s6">
-                                    @Html.DropDownListFor(m => m.ApproverId, new SelectList(Model.Employees, "Id", "FirstName"), "--Select--", new { @class = "" })
-                                    <label>Approver</label>
-                                </div>
+                              
                                 <div class="input-field col s6">
                                     @Html.DropDownListFor(m => m.LeaveTypeId, new SelectList(Model.LeaveTypes, "Id", "Name"), "--Select--", new { @class = "" })
                                     <label>Leave Type</label>
@@ -50,27 +47,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div  class="col s12">
-                            <br />
-                            <table class="cd-products-table top-fixed">
-                                <thead>
-                                    <tr>
-                                        <td>Employee</td>
-                                        <td>Comment</td>
-                                      
-                                    </tr>
-                                </thead>
-                                <tbody id="comment">
-                                    <tr>
-                                        <td>@Html.DropDownListFor(model => model.LeaveComments[0].Employee.Id, new SelectList(Model.Employees, "Id", "FirstName"), "--Select--", new { @class = "" })</td>
-                                        <td>@Html.TextBoxFor(model => model.LeaveComments[0].Comment)</td>
-                                    </tr>
-                                </tbody>
-                                @*<tfoot>
-                                    <tr><td><input value="Add More.." onclick="AddNewComment()" class="" type="button" /></td></tr>
-                                </tfoot>*@
-                            </table>
-                        </div>
+                       
                         <div class="row">
                             <div class="col s4 offset-m7 offset-m1">
                                 <input type="submit" class="btn btn-default green col s4 offset-m1" value="Save" />
@@ -88,17 +65,12 @@
     @Scripts.Render("~/bundles/jqueryval")
 
     <script type="text/javascript">
-        function AddNewComment() {
-            var rowNumber = $("#comment").find("tr").length;
-            console.log(rowNumber);
-            $("#comment").append('<tr><td><select><option selected="selected" value="0"> Select </option></select></td><td><input id="LeaveComments_' + rowNumber + '__Comment" name="LeaveComments[' + rowNumber + '].Comment" type="text" value=""></td>' +
-                         '</tr>');
-        }
-       
-
-        function RemoveRow(obj) {
-            $(obj).closest("tr").remove();
-        }
+        $(document).ready(function () {
+            $('.datepicker').pickadate({
+                selectMonths: true, // Creates a dropdown to control month
+                selectYears: 15 // Creates a dropdown of 15 years to control year
+            });
+        });
     </script>
 }
 
