Company Excel File Import

--- a/TestHR.Web/Areas/Admin/Views/Company/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Company/Index.cshtml
@@ -14,6 +14,7 @@
             <div class="card">
                 <div class="card-content">
                     <span class="card-title">Companies</span>
+                    <a href="@Url.Action("CompanyFileImport", "Company", new { })" class="btn-default"><i>Emport Excel</i></a>
                     <table id="companyList" class="display responsive-table datatable-example">
                         <thead>
                             <tr>
