--- a/TestHR.Web/Areas/Admin/Views/Department/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Department/Index.cshtml
@@ -14,6 +14,7 @@
                 <div class="card">
                     <div class="card-content">
                         <span class="card-title">Department</span>
+                        <a href="@Url.Action("DepartmentFileImport", "Department", new { })" class="btn-default"><i>Emport Excel</i></a>
                         <table id="companyList" class="display responsive-table datatable-example">
                             <thead>
                                 <tr>
