--- a/TestHR.Web/Areas/Admin/Views/Shift/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Shift/Index.cshtml
@@ -19,14 +19,12 @@
                                 <tr>
                                     <th>Name</th>
                                     <th>Code</th>
-                                    <th>Type</th>
-                                    <th>Description</th>
-                                    <th>IsDefault</th>
-                                    <th>IsActive</th>
-                                    <th>OfficeHourDescription</th>
-                                    <th>GraceTimeIn</th>
-                                    <th>GraceTimeOut</th>
-                                    <th>OvertimeStart</th>
+                                    <th>Type</th>           
+                                    <th>Default</th>
+                                    <th>Active</th>
+                                    <th>Grace Time In</th>
+                                    <th>Grace Time Out</th>
+                                    <th>OT Start</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
@@ -37,10 +35,10 @@
                                         <td>@shift.Name</td>
                                         <td>@shift.Code</td>
                                         <td>@shift.Type</td>
-                                        <td>@shift.Description</td>
+                                 
                                         <td>@shift.IsDefault</td>
                                         <td>@shift.IsActive</td>
-                                        <td>@shift.OfficeHourDescription</td>
+                                      
                                         <td>@shift.GraceTimeIn</td>
                                         <td>@shift.GraceTimeOut</td>
                                         <td>@shift.OvertimeStart</td>
