--- a/TestHR.Web/Views/Shared/_LeftMenuPartial.cshtml
+++ b/TestHR.Web/Views/Shared/_LeftMenuPartial.cshtml
@@ -14,7 +14,15 @@
             </ul>
         </div>
     </li>
-    <li class="no-padding"><a class="waves-effect waves-grey" href="charts.html"><i class="material-icons">trending_up</i>Attendance</a></li>
+    <li class="no-padding">
+        <a class="collapsible-header waves-effect waves-grey"><i class="material-icons">apps</i>Attendance<i class="nav-drop-icon material-icons">keyboard_arrow_right</i></a>
+      
+        <div class="collapsible-body">
+            <ul>
+                <li><a href="/Admin/AttendanceLog/Index">Attendance Log</a></li>
+            </ul>
+        </div>
+    </li>
     <li class="no-padding">
         <a class="collapsible-header waves-effect waves-grey"><i class="material-icons">star_border</i>Leave Management<i class="nav-drop-icon material-icons">keyboard_arrow_right</i></a>
         <div class="collapsible-body">
