--- a/TestHR.Web/Areas/Admin/Views/Shift/Add.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Shift/Add.cshtml
@@ -52,16 +52,16 @@
                                                 </div>
                                                 
                                                 <div class="input-field col s6">
-                                                    <input name="GraceTimeIn" id="GraceTimeIn" type="time" class="validate">
-                                                    <label for="GraceTimeIn" class="active">GraceTimeIn</label>
+                                                    <input name="GraceTimeIn" id="GraceTimeIn" type="number" class="validate">
+                                                    <label for="GraceTimeIn" class="active">Grace Time In(Min)</label>
                                                 </div>
                                                 <div class="input-field col s6">
-                                                    <input name="GraceTimeOut" id="GraceTimeOut" type="time" class="validate">
-                                                    <label for="GraceTimeOut" class="active">GraceTimeOut</label>
+                                                    <input name="GraceTimeOut" id="GraceTimeOut" type="number" class="validate">
+                                                    <label for="GraceTimeOut" class="active">Grace Time Out(Min)</label>
                                                 </div>
-                                                <div class="input-field col m12">
-                                                    <input name="OvertimeStart" id="OvertimeStart" type="time" class="validate">
-                                                    <label for="OvertimeStart" class="active">Overtime Start</label>
+                                                <div class="input-field col m6">
+                                                    <input name="OvertimeStart" id="OvertimeStart" type="number" class="validate">
+                                                    <label for="OvertimeStart" class="active">Overtime Start(Min)</label>
                                                 </div>
                                                 
                                                 <div class="input-field col s6">
