Attendance module complete

--- a/TestHR.Web/Views/Shared/_LeftMenuPartial.cshtml
+++ b/TestHR.Web/Views/Shared/_LeftMenuPartial.cshtml
@@ -20,6 +20,7 @@
         <div class="collapsible-body">
             <ul>
                 <li><a href="/Admin/AttendanceLog/Index">Attendance Log</a></li>
+                <li><a href="/Admin/Attendance/Index">Attendances</a></li>
             </ul>
         </div>
     </li>
