--- a/TestHR.Web/Areas/Admin/Views/Employee/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Employee/Index.cshtml
@@ -34,6 +34,8 @@
                                     <th>Branch</th>
                                     <th>Position</th>
                                     <th>Department</th>
+                                    <th>Role</th>
+                                    <th>Username</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
@@ -54,10 +56,14 @@
                                         <th>@employee.Nationality</th>
                                         <th>@employee.Nid</th>
                                         <th>@employee.PassportNo</th>*@
-                                        <th>@employee.Company.Name</th>
-                                        <th>@employee.Branch.Name</th>
-                                        <th>@employee.Position.Name</th>
-                                        <th>@employee.Department.Name</th>
+                                        <th>
+                                        @Html.DisplayFor(modelItem => employee.Company.Name)
+                                        </th>
+                                        <th>@Html.DisplayFor(modelItem => employee.Branch.Name)</th>
+                                        <th>@Html.DisplayFor(modelItem => employee.Position.Name)</th>
+                                        <th>@Html.DisplayFor(modelItem => employee.Department.Name)</th>
+                                        <th>@Html.DisplayFor(modelItem => employee.Role.RoleName)</th>
+                                        <th>@Html.DisplayFor(modelItem => employee.UserName)</th>
                                         <td>
                                             <a href="@Url.Action("Edit", "Employee", new { id = employee.Id })" class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>
                                             <a class="btn-floating waves-effect waves-light red sweetalert-warning" data-id="@employee.Id"><i class="material-icons">delete</i></a>
