--- a/TestHR.Web/Views/Shared/_LeftMenuPartial.cshtml
+++ b/TestHR.Web/Views/Shared/_LeftMenuPartial.cshtml
@@ -31,6 +31,10 @@
             <ul>
                 <li><a href="/Admin/Employee/Index">Employee List</a></li>
                 <li><a href="/Admin/Employee/Add">Create New</a></li>
+                @if (User.IsInRole("Global_SupAdmin") || User.IsInRole("Role_Configuration"))
+                { 
+                    <li><a href="/User/Roles">Roles</a></li>
+                }
             </ul>
         </div>
     </li>
